# tg_channel_manager

./: .env.template  .gitignore  README.md  get_env_helper.py  pyproject.toml
app/: main.py
app/config/: logger.py  settings.py
app/core/: utils.py
app/core/channel/: publisher.py
app/handlers/gate/: admin_gate.py
app/handlers/help/: help.py
app/handlers/scan/: scan.py
app/handlers/start/: start.py
app/handlers/store/: delay_posts.py
app/schemas/: enums.py  schema.py
app/storages/: publication.py  scheduled_store.py
